# husky_panda_mujoco

./: README.md
husky_panda_control/: CMakeLists.txt  package.xml
husky_panda_control/include/: fwd.h  mujoco_bridge.h  suhan_benchmark.h
husky_panda_control/include/controller/: controller.h
husky_panda_control/include/data_container/: data_container.h
husky_panda_control/include/mujoco/: mujoco_bridge.h  simulate.h
husky_panda_control/include/robot/: robot_model.h
husky_panda_control/include/utils/: math_type_define.h  motion.h  suhan_benchmark.h
husky_panda_control/src/: main.cpp  mujoco_bridge.cpp  simulate.cpp
husky_panda_control/src/controller/: controller.cpp
husky_panda_control/src/mujoco/: mujoco_bridge.cpp  simulate.cpp
husky_panda_control/src/robot/: robot_model.cpp
husky_panda_description/: husky_panda.xml  panda.xml
husky_panda_description/assets/: assets.xml  basic_scene.xml  husky.urdf.xml  husky_actuator.xml  husky_panda.urdf.xml  husky_panda_actuator.xml  panda.urdf.xml  panda_actuator.xml
husky_panda_description/urdf/: husky_panda copy.urdf  panda.urdf
